# Open_RAG

./: .gitignore  LICENSE  README.md  embedding.py  generator.py  main.py  manage.py  prompts.py  pyproject.toml  queryTranslator.py  requirements.txt
LikelyImprov/: asyncPDFLoader.py  embedPrototype.py  rag.py  test.py  test1.py
chroma_RUN TECH SPACE PRESENTATION DOCUMENT.db/: chroma.sqlite3
loaders/: base_loader.py  pdf_loader.py  pptx_loader.py
my_rag_api/: apps.py  sample_views.py  serializers.py  urls.py  utilis.py  views.py
open_rag_final/: asgi.py  settings.py  urls.py  wsgi.py
rag_demo/: embeddings.py  prompts.py  queryTranslator.py
rag_demo/loaders/: docxloader.py  pdf_loader.py  pptx_loader.py
